Bug 141558 - incorrect uncomment for nested comments (regression?)
Summary: incorrect uncomment for nested comments (regression?)
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-11 22:16 UTC by Maciej Pilichowski
Modified: 2010-01-11 00:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Maciej Pilichowski 2007-02-11 22:16:48 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    SuSE RPMs

C++. Uncomment this:

/* start from beginning of this line
  // A
  foo(); // B
to the end of this line */

First, A will be uncommented! It does not make sense, since block-comment here has the priority.

And I believe in KDE 3.5.5 it worked fine, I see it for the first time in KDE 3.5.6 :-((
Comment 1 Andreas Pakulat 2007-02-11 23:13:19 UTC
No offense meant, but could you please stop reporting bugs against kdevelop which are really a problem of the editor? In the future please check that kate doesn't have a problem you encounter with kdevelop before reporting the problem to kdevelop.
Comment 2 Thomas Friedrichsmeier 2007-12-13 23:42:15 UTC
Yupp, this does not look quite right. Confirming in KDE 3.5.8 and KDE 4.

See also bug #128500 for a related problem.
Comment 3 Dario Andres 2009-01-04 22:31:12 UTC
Still valid here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
kdelibs svn rev. 905636 / kdebase svn rev. 905636
kdesdk svn rev. 905676
on ArchLinux x86_64 - Kernel 2.6.27.10
Comment 4 Pascal Létourneau 2010-01-11 00:56:26 UTC
SVN commit 1072800 by pletourn:

Give priority to multi-line comment when uncommenting a selection

BUG:141558


 M  +4 -4      katedocument.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072800
Comment 5 Pascal Létourneau 2010-01-11 00:57:40 UTC
SVN commit 1072802 by pletourn:

Give priority to multi-line comment when uncommenting a selection

CCBUG:141558


 M  +4 -4      katedocument.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1072802