Give priority to multi-line comment when uncommenting a selection

BUG:141558

svn path=/trunk/KDE/kdelibs/kate/; revision=1072800